...
          targetKey: 'program',
        })
      : null,
    programEmptyState: hasAssignedProgram
      ? null
      : {
          title: 'No program available',
          body: undefined,
        },
    workoutListTitle: 'My Workouts',
    workoutEmptyState: {
      title: 'No workout available',
      body: undefined,
...
